--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MVVMFrame</string>
+
+    <string name="home">首页</string>
+    <string name="news">新闻</string>
+    <string name="weather">天气</string>
+    <string name="personal">我的</string>
 </resources>
